Attempting to fix body positioning on mobile. Again.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 body {
    margin: 0px;
+   top: 0px;
+   left: 0px;
    overflow: auto;
 }
 
